syntax = "proto3";
package webRTCBuilder;

message Message {
  bool isInitiator = 1;
  oneof type {
    string offer = 2;
    string answer = 3;
    IceCandidate iceCandidate = 4;
    bool isError = 5;
    bool isEnd = 6;
  }
}

message IceCandidate {
  string candidate = 1;
  string sdpMid = 2;
  uint32 sdpMLineIndex = 3;
}
